--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,9 @@
               </div>
             </div>
             <%= bootstrap_flash %>
-            <%= yield %>
+            <div class="span6">
+              <%= yield %>
+            </div>
           </div>
           <div class="span3">
             <div class="well sidebar-nav">
@@ -76,7 +78,7 @@
                 <li class="nav-header">Sidebar</li>
                 <li><%= link_to "Link1", "/path1"  %></li>
                 <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Link3", "/path3"  %></li>
+                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete  %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
