--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
                 <li class="nav-header">Sidebar</li>
-                <li><%= link_to "Link1", "/path1"  %></li>
+                <li><%= link_to "Main stream", root_path  %></li>
                 <li><%= link_to "Link2", "/path2"  %></li>
                 <li><%= link_to "Sign out", destroy_user_session_path, method: :delete  %></li>
               </ul>
