--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,5 +1,5 @@
 <div class="span6 ">
-  <h2> Messages </h2>
+  <h2> All messages </h2>
   <hr />
   <%= render 'shared/new_message_module' %>
   <div id="home_messages-list" >
