--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,12 +46,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Tasker</a>
+          <a class="brand" href=<%= root_path %>>Tasker</a>
           <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+            <ul class="nav pull-right">
+              <li><%= link_to "Sign out", destroy_user_session_path, method: :delete   %></li>
+            <!--   <li><%= link_to "Link2", "/path2"  %></li>
+              <li><%= link_to "Link3", "/path3"  %></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -63,22 +63,21 @@
           <div class="span9">
             <div class="span3" style="margin-left:-20px;">
               <div class="well">
-                <h3>Future task pannel</h3>
+                <h3 class="muted">Future task pannel</h3>
               </div>
             </div>
-            <%= bootstrap_flash %>
             <div class="span6">
+              <%= bootstrap_flash %>
               <%= yield %>
             </div>
           </div>
           <div class="span3">
             <div class="well sidebar-nav">
-              <h3>Sidebar</h3>
+              <h3>Navigation</h3>
               <ul class="nav nav-list">
-                <li class="nav-header">Sidebar</li>
+                <li class="nav-header">Places</li>
                 <li><%= link_to "Main stream", root_path  %></li>
-                <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete  %></li>
+                <li><%= link_to "Your profile", current_user  %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
