--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,6 @@
 <div class="media">
   <a class="pull-left" href="#">
-    <%= image_tag('user.jpg', size: "48x48") %>
+    <%= gravatar_for(message.user) %>
   </a>
   <div class="media-body">
     <p><%= message.text %></p>
