--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,6 @@
           <div class="container nav-collapse">
             <ul class="nav pull-right">
               <li><%= link_to "Sign out", destroy_user_session_path, method: :delete   %></li>
-            <!--   <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -61,15 +59,15 @@
     <div class="container" style="margin-top:50px;">
         <div class="row">
           <div class="span9">
-            <div class="span3" style="margin-left:-20px;">
+           <!--  <div class="span3" style="margin-left:-20px;">
               <div class="well">
                 <h3 class="muted">Future task pannel</h3>
               </div>
-            </div>
-            <div class="span6">
+            </div> --><!-- 
+            <div class="span6"> -->
               <%= bootstrap_flash %>
               <%= yield %>
-            </div>
+           <!--  </div> -->
           </div>
           <div class="span3">
             <div class="well sidebar-nav">
@@ -77,14 +75,14 @@
               <ul class="nav nav-list">
                 <li class="nav-header">Places</li>
                 <li><%= link_to "Main stream", root_path  %></li>
-                <li><%= link_to "Your profile", current_user  %></li>
+                <li class="pull-left"><%= link_to "Your profile", current_user  %>&nbsp;</li>
+                <li><%= link_to "Edit", edit_user_path(current_user), class:"muted small" %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
         </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2013</p>
       </footer>
 
     </div> <!-- /container -->
