--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,10 @@
 <h3> Edit your information</h3>
 
+<div class="span2">
+  <%= gravatar_for(@user, size: 150) %>
+  <%= link_to 'Change', "http://gravatar.com/emails", { target: "_blank"} %>
+
+
 <%= form_for @user  do |f| %>
   <div>
     <%= f.label :nick_name %>
@@ -12,3 +17,4 @@
     <%= f.submit "Update", class:"btn btn-primary" %>
   </div>
 <% end %>
+</div>
