--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,96 @@
-<h3>@<%= @user.nick_name %> profile</h3>
-<p class="muted"> This section is under work</p>
-<br />
 
-<div>
-  <div>
-    <!-- message part -->
-   <!--  <%= render 'messages/form', conversation_id: nil  %> -->
-  </div>
+      <div class="span3"></div>
+      <div class="span6">
+        <div class="tabbable"> <!-- Only required for left/right tabs -->
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#tab1" data-toggle="tab">Tasks</a></li>
+            <li><a href="#tab2" data-toggle="tab">Conversation</a></li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane active" id="tab1">
+              <p>I'm in Section 1.</p>
+              <div class="block">
+                <form class="navbar-form pull-left">
+                  <input type="text" class="form-title">
+                  <input type="text" class="form-description">
+                  <button type="submit" class="btn">Submit</button>
+                </form>
+              </div>
+              <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div>
 
-  <div>
-  </div>
-  
-  <div id="user_message-list">
-    <%= render @messages %>
-  </div>
-</div>
+               <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div> <div class="block">
+                <h3>Task 1</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div>
+              <div class="block">
+                <h3>Task 2</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div>
+              <div class="block">
+                <h3>Task 3</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div>
+              <div class="block">
+                <h3>Task 4</h3>
+                <span class="not-date"></span>
+                <p>Task description</p>
+              </div>
+            </div>
+            <div class="tab-pane" id="tab2">
+              <p>Howdy, I'm in Section 2.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="span3"></div>
