--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,18 @@
+$font-stack:    Helvetica, sans-serif;
+$red: rgb(252, 0, 0);
+$backgrey: rgb(223, 223, 223);
+$dgrey: rgb(63,63,63);
+$green: #7dc36b;
+$lgreen: #86d173;
+$fontgrey: rgb(35, 35,35);
+$hovergrey: rgb(183,183,183);
+$hovercolor: rgb(233, 233, 233);
+$activeblue: rgb(23, 135, 209);
+$whitegrey: rgb(242, 242, 242);
+$back: rgb(152,152,152);
+$white: #fff;
+$black: #000;
+
 * {
   margin: 0;
 }
@@ -6,8 +21,8 @@ html, body {
   height: 100%;
 }
 header {
-  height: 70px;
-  border-top: 10px solid red;
+  height: 30px;
+  margin-bottom: 30px;
   text-align: center;
   background: #88bfe8; /* Old browsers */
   background: -moz-linear-gradient(top, #88bfe8 0%, #d6d6d6 100%); /* FF3.6+ */
@@ -25,32 +40,53 @@ header {
   min-height: 100%;
     /* equal to footer height */
     margin-bottom: -60px;
-  background: grey;
-  .span3 {
+  background: url(back2.png);
+  .left {
 
   }
-  .container-fluid{
-    margin-top: 41px;
-  }
-  .span6 {
+  .center-wrap {
     background: #F2F2F2;
-    border-radius: 5px;
+    border-radius: 0px;
+
     .nav-tabs {
       li{
         width: 50%;
+        text-align: center;
+        border-radius: 0;
       }
-      a {
-        background: #fff;
+      li a{
+        color: $activeblue;
+        font-size: 20px;
+        border-radius: 0;
+        background: $backgrey;
+
       }
-      .active a{
-        background:#F2F2F2;
-        border-bottom: none;
+      
+
+      li.active a {
+        background: rgb(242,242,242);
+        color: $activeblue;
+        
+      }
+      li a:hover {
+        background: $hovergrey;
+        color: $activeblue;
+        border-bottom: transparent; 
+      }
+      li.active a:hover {
+        border-bottom-color: transparent;
+        opacity: 0.9;
+      }
+      li.active:hover {
+        border-bottom-color: transparent;
       }
     }
+    
+    
+
     .block {
       height: 90px;
       padding: 0 10px;
-      margin: 0 2px;
       border-radius: 2px;
       background: #ededed; /* Old browsers */
       background: -moz-linear-gradient(top, #ededed 0%, #c9c9c9 100%); /* FF3.6+ */
@@ -68,10 +104,68 @@ header {
 
     }
   }
+
+  .modal {
+      width: 64%;
+      left: 18%;
+      margin: 0;
+      border-radius: 0;
+      background: url(back2.png);
+    
+    .modal-body {
+      label {
+       color: $whitegrey;
+       margin: 0;
+       padding: 0; 
+      }
+
+      input,textarea, select {
+        background: transparent;
+        border: 4px solid $whitegrey;
+        color: $whitegrey;
+        border-radius: 0;
+
+
+      }
+      .year {
+        border-radius: 15px;
+      }
+      input:active,input:focus, input:hover, textarea:hover, textarea:focus, textarea:active {
+        background: $whitegrey;
+        color: $back;
+      }
+
+      .caption {
+          height: 15px;
+          width: 30%;
+          min-width: 200px;
+          max-width: 250px;
+        }
+      .description {
+        display: block;
+        height: 90px;
+        width: 60%;
+        min-width: 200px;
+        max-width: 500px;
+
+      }
+
+
+
+       
+    }
+  
+  }
+
   .hfooter {
     clear: both;
     height: 60px;
 
+  }
+.right {
+    .right-nav-wrap {
+      background: $backgrey;
+    }
   }
 }
 .main:after {
@@ -82,4 +176,7 @@ header {
 footer {
   height: 60px;
   background: red;
+}
+.container-margined {
+  margin-top: 64px;
 }
