--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 
   <body>
     <div class="main">
-      <div class="navbar navbar-inverse navbar-fixed-top">
+      <header class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
@@ -55,11 +55,27 @@
           </div><!--/.nav-collapse -->
         </div>
       </div>
-      </div>
+      </header>
       <div class="container-fluid">
-        <div class="row-fluid">
+        <div class="row-fluid container-margined">
           <%= bootstrap_flash %>
-          <%= yield %>
+
+
+            <%= yield %>
+
+
+          <!-- Правое меню  -->
+            <div class="span2 right">
+              <div class="right-nav-wrap">
+                <ul class="nav nav-list">
+                  <li class="nav-header">Rigth menu</li>
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Profile</a></li>
+                  <li><a href="#">Tasker</a></li>
+                  <li><a href="#">Conversation</a></li>
+                </ul>
+              </div>
+          </div>
         </div>
 
 
