Js for forms + sign_out label fix

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,24 +1,1 @@
-<%= form_for [current_user, @task] do |f| %>
-  <div> 
-    <%= f.label :caption %>
-    <%= f.text_field :caption %>
-  </div>
-
-  <div>
-    <%= f.label :description %>
-    <%= f.text_area :description, placeholder: "Describe your task" %>
-  </div>
-
-  <div>
-    <%= f.label :deadline %>
-    <%= f.date_select :deadline, start_year: Time.now.year, default: 1.month.from_now, with_css_classes:true %>
-  </div>
-
-  <div> 
-    <%= f.label :notify_date, "Notify start date" %>
-    <%= f.date_select :notify_date, start_year: Time.now.year, default: 2.weeks.from_now, with_css_classes:true %>
-  </div>
-  <div>
-    <%= f.submit "Create task", class:"btn btn-primary"  %>
-  </div>
-<% end %>
+<%= render "tasks/form", task:@task %>
