--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,10 +47,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href=<%= root_path %>>Tasker</a>
+          <a class="brand" href=<%= root_path %> >Tasker</a>
           <div class="container nav-collapse">
             <ul class="nav pull-right">
+            <% if !current_user.nil? %>
               <li><%= link_to "Sign out", destroy_user_session_path, method: :delete   %></li>
+            <% else %>
+              <li><%= link_to "Sign in", new_user_session_path %></li>
+            <% end %>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
