--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,23 +8,9 @@
     </ul>
     <div class="tab-content">
       <div class="tab-pane active" id="tab1">
+        
         <div class="block">
-        <a href="#myModal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
- 
-<!-- Modal -->
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Modal header</h3>
-  </div>
-  <div class="modal-body">
-    <p>One fine body…</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary">Save changes</button>
-  </div>
-</div>
+          <a href="#myModal" role="button" class="btn btn-primary modal-toggle" id="task-modal-toggle" data-toggle="modal">Add task</a>
         </div>
         
         <% if !@tasks.empty? %>
@@ -35,9 +21,40 @@
 
       </div>
       <div class="tab-pane" id="tab2">
-        <p>Howdy, I'm in Section 2.</p>
+        
+       <div class="block">
+        <a href="#myModal" role="button" class="btn btn-primary modal-toggle" id="conversation-modal-toggle" data-toggle="modal">New Conversation</a>
+      </div>
+
+      <% if !@conversations.empty? %>
+        <%= render @converstaions %>
+      <% else %>
+        <p> No conversations </p>
+      <% end %>
+
       </div>
     </div>
   </div>
 </div>
 <div class="span3"></div>
+
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel"></h3>
+  </div>
+  <div class="modal-body">
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button id="create-btn" class="btn btn-primary">Create</button>
+  </div>
+</div>
+
+<div id="task-form" class="hidden">
+  <%= render 'tasks/form', task: current_user.tasks.new %>
+</div>
+
+<div id="conversation-form" class="hidden">
+  <%= render 'conversations/form', conversation: current_user.started_conversations.new %>
+</div>
