--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,35 +8,60 @@
             <div class="tab-content">
               <div class="tab-pane active" id="tab1">
                 <div class="block">
-                  <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary"><i class=" icon-plus"></i> Add Task</button>
+                  <a href="#TaskModal" role="button" class="btn btn-primary" data-toggle="modal">Add task</a>
                 </div>
 
                 <% if !@tasks.empty? %>
                   <%= render @tasks %>
                 <% else %>
                   <div class="notasks">
-                    <p>You don't have any task yet. Too create one clich the button above ("add task").</p>
+                    <p>You don't have any task yet. Too create one click the button above ("add task").</p>
                   </div>
                 <% end %>
                            
               </div>
-
               <div class="tab-pane" id="tab2">
-                <p>Howdy, I'm in Section 2.</p>
+                <div class="block">
+                  <a href="#ConversationModal" role="button" class="btn btn-primary" data-toggle="modal"><i class=" icon-plus"></i> Add Conversation</a>
+                </div>
+                <% if !@conversations.empty? %>
+                  <%= render @conversation %>
+                <% else %>
+                  <div class="notasks">
+                    <p>You don't have any conversation yet. Too create one click the button above ("add conversation").</p>
+                  </div>
+                <% end %>
               </div>
+
+              
             </div>
           </div>
         </div>
 
 
+<div id="myModal" class="modal hide fade " tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
- <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+
+ <div id="TaskModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="TaskModalLabel" aria-hidden="true">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
       <h3 id="myModalLabel">Modal header</h3>
     </div>
     <div class="modal-body">
       <%= render 'tasks/form', task: current_user.tasks.new %>
+     
+    </div>
+</div>
+<div id="ConversationModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="ConversationModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="myModalLabel">Modal header</h3>
+    </div>
+    <div class="modal-body">
+      <%= render 'conversations/form' %>
+
+      
      
     </div>
 </div>
