minor render changes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
                   <a href="#ConversationModal" role="button" class="btn btn-primary" data-toggle="modal"><i class=" icon-plus"></i> Add Conversation</a>
                 </div>
                 <% if !@conversations.empty? %>
-                  <%= render @conversation %>
+                  <%= render 'conversations/form', conversation: current_user.started_conversations.new %>
                 <% else %>
                   <div class="notasks">
                     <p>You don't have any conversation yet. Too create one click the button above ("add conversation").</p>
