--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -121,8 +121,8 @@ header {
 
       .btn-primary {
         width: 100%;
-        height: 70px;
-        padding: 0;
+        height: 15px;
+        padding: 25px 0 30px 0;
         margin-top: 10px;
         background: transparent;
         color: $activeblue;
@@ -186,15 +186,15 @@ header {
       }
 
     }
-    .task-block, .conversation-block {
-      background: $white; /* Old browsers */
-      background: -moz-linear-gradient(top, $white 0%, $whitegrey 100%); /* FF3.6+ */
-      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$white), color-stop(100%,$whitegrey)); /* Chrome,Safari4+ */
-      background: -webkit-linear-gradient(top, $white 0%,$whitegrey 100%); /* Chrome10+,Safari5.1+ */
-      background: -o-linear-gradient(top, $white 0%,$whitegrey 100%); /* Opera 11.10+ */
-      background: -ms-linear-gradient(top, $white 0%,$whitegrey 100%); /* IE10+ */
-      background: linear-gradient(to bottom, $white 0%,$whitegrey 100%); /* W3C */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$white', endColorstr='#$whitegrey',GradientType=0 ); /* IE6-9 */
+    .task-block:hover, .conversation-block:hover {
+      background: $whitegrey; /* Old browsers */
+      background: -moz-linear-gradient(top, $whitegrey 0%, $white 100%); /* FF3.6+ */
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$whitegrey), color-stop(100%,$white)); /* Chrome,Safari4+ */
+      background: -webkit-linear-gradient(top, $whitegrey 0%,$white 100%); /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(top, $whitegrey 0%,$white 100%); /* Opera 11.10+ */
+      background: -ms-linear-gradient(top, $whitegrey 0%,$white 100%); /* IE10+ */
+      background: linear-gradient(to bottom, $whitegrey 0%,$white 100%); /* W3C */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$whitegrey', endColorstr='#$white',GradientType=0 ); /* IE6-9 */
     }
   }
 
@@ -212,18 +212,38 @@ header {
        padding: 0; 
       }
 
-      input,textarea, select {
+      input,textarea, select, .bootstrap-tagsinput {
         background: transparent;
         border: 4px solid $whitegrey;
         color: $whitegrey;
         border-radius: 0;
-
-
       }
+      .bootstrap-tagsinput {
+        width: 400px;
+          input {
+          background: transparent;
+          border: none;
+          height: auto;
+          width: auto;
+          margin: 0;
+          padding: 0;
+        }
+        input:hover, input:focus {
+          background: transparent;
+          border: none;
+          outline: none;
+          color: $white;
+          box-shadow: none;
+        }
+        
+      }
+
+
+
       .year {
         border-radius: 15px;
       }
-      input:active,input:focus, input:hover, textarea:hover, textarea:focus, textarea:active {
+      input:active,input:focus, input:hover, textarea:hover, textarea:focus, textarea:active, {
         background: $whitegrey;
         color: $back;
       }
